[gd_scene load_steps=93 format=3 uid="uid://syde6aockvsy"]

[ext_resource type="Script" uid="uid://c8y0q0h86njle" path="res://objects/character/character.gd" id="1_kqqmu"]
[ext_resource type="Texture2D" uid="uid://c2v2sist2ej7j" path="res://assets/cat/elthen/Cat Sprite Sheet.png" id="2_fa08w"]
[ext_resource type="Texture2D" uid="uid://cp7nby3ijnnkj" path="res://assets/lemur/dancing_spritesheet.png" id="3_7i2cw"]
[ext_resource type="Texture2D" uid="uid://wmp0klajf63t" path="res://assets/lemur/idle1_spritesheet.png" id="3_kqqmu"]
[ext_resource type="Texture2D" uid="uid://dbuy6i3sodjkp" path="res://assets/lemur/idle_2spritesheet.png" id="4_bgofs"]
[ext_resource type="Texture2D" uid="uid://c4383agb0a6wg" path="res://assets/lemur/jump_spritesheet.png" id="6_1aeo5"]
[ext_resource type="Texture2D" uid="uid://hutlonv82buq" path="res://assets/lemur/talking_spritesheet.png" id="6_pvito"]
[ext_resource type="Texture2D" uid="uid://bs2kjucwuwbd5" path="res://assets/icons/64px-Cogwheel.png" id="8_1aeo5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qwc55"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3q6p"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edbj4"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pncnh"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrmhm"]
atlas = ExtResource("2_fa08w")
region = Rect2(128, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo8ik"]
atlas = ExtResource("2_fa08w")
region = Rect2(160, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1v86"]
atlas = ExtResource("2_fa08w")
region = Rect2(192, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0mqc"]
atlas = ExtResource("2_fa08w")
region = Rect2(224, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qec4"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_er420"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72d1s"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pab6"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6fpb"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4x24"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqll6"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iso6w"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbrq3"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgowc"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16l82"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oe4d"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phkpy"]
atlas = ExtResource("2_fa08w")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqkah"]
atlas = ExtResource("2_fa08w")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83d63"]
atlas = ExtResource("2_fa08w")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6stwa"]
atlas = ExtResource("2_fa08w")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13krv"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hncnh"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht815"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq5pw"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5026x"]
atlas = ExtResource("2_fa08w")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8r58"]
atlas = ExtResource("2_fa08w")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m482k"]
atlas = ExtResource("2_fa08w")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0p7"]
atlas = ExtResource("2_fa08w")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx4ch"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd48w"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4h7e"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s141t"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r67h"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp3bl"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_et106"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5pw7"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs08k"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ar6c"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkina"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuvj4"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psa7q"]
atlas = ExtResource("2_fa08w")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jemac"]
atlas = ExtResource("2_fa08w")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocou6"]
atlas = ExtResource("2_fa08w")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3evo"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwa73"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1nst"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdjpn"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1quim"]
atlas = ExtResource("2_fa08w")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0lwl"]
atlas = ExtResource("2_fa08w")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uci6"]
atlas = ExtResource("2_fa08w")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ealew"]
atlas = ExtResource("2_fa08w")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebe88"]
atlas = ExtResource("2_fa08w")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu02t"]
atlas = ExtResource("2_fa08w")
region = Rect2(160, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f6lkx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwc55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3q6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edbj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pncnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrmhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo8ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1v86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0mqc")
}],
"loop": false,
"name": &"arching",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qec4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er420")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72d1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pab6")
}],
"loop": true,
"name": &"idle1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6fpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4x24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqll6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iso6w")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbrq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgowc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16l82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oe4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phkpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqkah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83d63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6stwa")
}],
"loop": false,
"name": &"jumping1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13krv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hncnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht815")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq5pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5026x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8r58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m482k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0p7")
}],
"loop": false,
"name": &"jumping2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx4ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd48w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4h7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s141t")
}],
"loop": false,
"name": &"lick1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r67h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp3bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et106")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5pw7")
}],
"loop": false,
"name": &"lick2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs08k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ar6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkina")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuvj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psa7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jemac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocou6")
}],
"loop": false,
"name": &"pounce",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3evo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1nst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdjpn")
}],
"loop": true,
"name": &"sleeping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1quim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0lwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uci6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ealew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebe88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu02t")
}],
"loop": false,
"name": &"tap",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cimns"]
atlas = ExtResource("3_7i2cw")
region = Rect2(0, 0, 471, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j04g"]
atlas = ExtResource("3_7i2cw")
region = Rect2(471, 0, 471, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_kotxr"]
atlas = ExtResource("3_7i2cw")
region = Rect2(942, 0, 471, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgofs"]
atlas = ExtResource("3_kqqmu")
region = Rect2(0, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgxnf"]
atlas = ExtResource("3_kqqmu")
region = Rect2(374, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i2cw"]
atlas = ExtResource("3_kqqmu")
region = Rect2(748, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvito"]
atlas = ExtResource("3_kqqmu")
region = Rect2(1122, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aeo5"]
atlas = ExtResource("4_bgofs")
region = Rect2(0, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8fm2"]
atlas = ExtResource("4_bgofs")
region = Rect2(374, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6lkx"]
atlas = ExtResource("4_bgofs")
region = Rect2(748, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ueao"]
atlas = ExtResource("4_bgofs")
region = Rect2(1122, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhcc4"]
atlas = ExtResource("6_1aeo5")
region = Rect2(0, 0, 516, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_272xm"]
atlas = ExtResource("6_1aeo5")
region = Rect2(516, 0, 516, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_l77u6"]
atlas = ExtResource("6_1aeo5")
region = Rect2(1032, 0, 516, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_otdju"]
atlas = ExtResource("6_1aeo5")
region = Rect2(2064, 0, 516, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_typid"]
atlas = ExtResource("6_1aeo5")
region = Rect2(1548, 0, 516, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7fsx"]
atlas = ExtResource("6_pvito")
region = Rect2(374, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5y7o"]
atlas = ExtResource("6_pvito")
region = Rect2(748, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7ty2"]
atlas = ExtResource("6_pvito")
region = Rect2(1122, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip4ht"]
atlas = ExtResource("6_pvito")
region = Rect2(1496, 0, 374, 375)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftxke"]
atlas = ExtResource("6_pvito")
region = Rect2(0, 0, 374, 375)

[sub_resource type="SpriteFrames" id="SpriteFrames_1aeo5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cimns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j04g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kotxr")
}],
"loop": true,
"name": &"dancing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgofs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgxnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i2cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvito")
}],
"loop": true,
"name": &"idle1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aeo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8fm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6lkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ueao")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhcc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l77u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otdju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_typid")
}],
"loop": false,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7fsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5y7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7ty2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip4ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftxke")
}],
"loop": true,
"name": &"talking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8fm2"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_tefeu"]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsButton:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o6xl0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tipki"]
_data = {
&"RESET": SubResource("Animation_o6xl0"),
&"fade_in": SubResource("Animation_tefeu")
}

[node name="Character" type="Node2D"]
script = ExtResource("1_kqqmu")
idle_action_interval_min = 10.0
idle_action_interval_max = 30.0

[node name="CatSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_f6lkx")
animation = &"jumping2"
autoplay = "sleeping"
frame = 7
frame_progress = 1.0

[node name="LemurSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_1aeo5")
animation = &"idle2"
autoplay = "idle1"

[node name="IdleActionTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="HoverTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="HoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea"]
shape = SubResource("RectangleShape2D_b8fm2")

[node name="SettingsButton" type="TextureButton" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
offset_left = 13.0
offset_top = -30.0
offset_right = 29.0
offset_bottom = -14.0
disabled = true
texture_normal = ExtResource("8_1aeo5")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsAnimationPlayer" type="AnimationPlayer" parent="SettingsButton"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_tipki")
}

[connection signal="timeout" from="IdleActionTimer" to="." method="_on_idle_action_timer_timeout"]
[connection signal="timeout" from="HoverTimer" to="." method="_on_hover_timer_timeout"]
[connection signal="mouse_entered" from="HoverArea" to="." method="_on_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_hover_area_mouse_exited"]
[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButton" to="." method="_on_settings_button_mouse_exited"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
